2004-12-21  Dan Winship  <danw@novell.com>

	* generator/CallbackGen.cs:
	* generator/CodeGenerator.cs: 
	* generator/ManagedCallString.cs:
	* generator/Property.cs: Remove unused vars

	* generator/Method.cs (GetHashCode): have to implement this since
	we're overriding Equals.

	* generator/CallbackGen.cs: print a message when generating a
	broken struct-returning callback. (Currently affects
	GtkSharp.TextSegSplitFuncNative and
	GtkSharp.TextSegCleanupFuncNative)

	* gdk/glue/device.c: 
	* gdk/glue/dragcontext.c: Add missing prototypes

	* gtk/Gtk.metadata: Mark SeparatorToolItem.Draw "new". Re-rename
	CheckMenuItem.Toggled to EmitToggled rather than Toggle, since
	that's a better description of what it does.

	* gtk/CheckMenuItem.custom: implement a "Toggle" method that does
	what the documentation claims it does.

	* gtk/NodeStore.cs: remove unused var

	* gnome/Gnome.metadata: mark DateEdit.Flags, Dialog.Default, and
	PropertyBox.State "new". Hide GnomePixmapEntry.GnomeEntry and
	GnomePixmapEntry.GtkEntry since they do exactly the same thing as
	the methods of the same names inherited from GnomeFileEntry.

	* gnome/glue/canvas-proxy.c:
	* gnome/glue/canvas-proxy.h:
	* gnome/glue/canvas-proxy-marshal.c:
	* gnome/glue/canvas-proxy-marshal.h:
	* gnome/glue/canvas-proxy-marshal.list: Remove unused code

	* gnome/glue/Makefile.am (libgnomesharpglue_2_la_SOURCES): update

	* panelapplet/PanelApplet.metadata: mark PanelApplet.Flags "new"

	* sample/CanvasExample.cs: 
	* sample/CustomCellRenderer.cs: 
	* sample/CustomNotebook.cs: 
	* sample/DrawingSample.cs:
	* sample/Fifteen.cs: 
	* sample/GladeTest.cs: 
	* sample/GtkDemo/DemoHyperText.cs: 
	* sample/GtkDemo/DemoPixbuf.cs: 
	* sample/ScribbleXInput.cs: remove unused vars, use
	GLib.Timeout.Add rather than the deprecated Gtk.Timeout.Add
	
2004-12-21  Jeroen Zwartepoorte  <jeroen@xs4all.nl>

	* gnomevfs/Async.cs:
	* gnomevfs/Directory.cs:
	* gnomevfs/Sync.cs: