@@ -1,3 +1,10 @@
+2004-12-21  Mike Kestner  <mkestner@novell.com>
+
+	* glib/Argv.cs : argv marshaling class.
+	* glib/Makefile.am : add file.
+	* glib/Marshaller.cs : mark the argv methods obsolete.
+	* gtk/Application.cs : use GLib.Argv. [Fixes #68812]
+
 2004-12-21  Dan Winship  <danw@novell.com>
 
 	* generator/CallbackGen.cs:
